--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="form-container">
         <div class="sidebar">
-            <img src="zoro.png" alt="Sign Up Image">
+            <img src="./zoro.png" alt="Sign Up Image">
 
             <div class="overlay">
                 <div class="logo">
